# Chess

./: .gitignore  ai_player.py  board.py  data_to_np.py  dataset_builder.py  engine.py  export_model.py  features.py  fetch_pgns.py  gui.py  main.py  train_model.py  uci_bridge.py
chess-engine-rs/: Cargo.toml
chess-engine-rs/model/: chess_model.onnx
chess-engine-rs/src/: eval.rs  main.rs  nn.rs  search.rs  uci.rs
